update static-pages chart

--- a/charts/static-pages/values.yaml
+++ b/charts/static-pages/values.yaml
@@ -91,7 +91,7 @@ staticpages:
     hosts:
       - host: example.com
         paths:
-          - path: /
+          - path: /api
             pathType: ImplementationSpecific
     tls:
       - secretName: chart-example-local-tls
