--- a/charts/static-pages/templates/ingress.yaml
+++ b/charts/static-pages/templates/ingress.yaml
@@ -47,7 +47,7 @@ spec:
     - host: {{ .host | quote }}
       http:
         paths:
-          - path: /upload
+          - path: /api
             pathType: ImplementationSpecific
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
