--- a/charts/tka/templates/deployment.yaml
+++ b/charts/tka/templates/deployment.yaml
@@ -50,9 +50,6 @@ spec:
             - name: https
               containerPort: {{ .Values.tka.tailscale.port }}
               protocol: TCP
-            - name: http-metrics
-              containerPort: {{ .Values.service.metricsPort }}
-              protocol: TCP
           env:
             - name: TS_AUTHKEY
               valueFrom:
@@ -70,7 +67,12 @@ spec:
           livenessProbe:
             httpGet:
               path: /metrics
-              port: http-metrics
+              port: https
+              {{- if eq (.Values.tka.tailscale.port | int) 443 }}
+              scheme: HTTPS
+              {{- else }}
+              scheme: HTTP
+              {{- end }}
             initialDelaySeconds: 60
             periodSeconds: 30
             timeoutSeconds: 10
@@ -78,7 +80,12 @@ spec:
           readinessProbe:
             httpGet:
               path: /metrics
-              port: http-metrics
+              port: https
+              {{- if eq (.Values.tka.tailscale.port | int) 443 }}
+              scheme: HTTPS
+              {{- else }}
+              scheme: HTTP
+              {{- end }}
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
