fix(tka): metrics

--- a/charts/tka/templates/configmap.yaml
+++ b/charts/tka/templates/configmap.yaml
@@ -41,3 +41,6 @@ data:
       long: {{ .Values.tka.output.long }}
       quiet: {{ .Values.tka.output.quiet }}
       markdownlint-fix: {{ .Values.tka.output.markdownlintFix }}
+
+    health:
+      port: {{ .Values.tka.health.port }}
