--- a/charts/tka/templates/servicemonitor.yaml
+++ b/charts/tka/templates/servicemonitor.yaml
@@ -13,15 +13,11 @@ spec:
     matchLabels:
       {{- include "tka.selectorLabels" . | nindent 6 }}
   endpoints:
-  - port: https
-    path: {{ .Values.serviceMonitor.path }}
-    interval: {{ .Values.serviceMonitor.interval }}
-    scrapeTimeout: {{ .Values.serviceMonitor.scrapeTimeout }}
-    {{- if eq (.Values.tka.tailscale.port | int) 443 }}
-    scheme: https
-    tlsConfig:
-      insecureSkipVerify: true
-    {{- else }}
+  {{- range .Values.serviceMonitor.paths }}
+  - port: health
+    path: {{ . }}
+    interval: {{ $.Values.serviceMonitor.interval }}
+    scrapeTimeout: {{ $.Values.serviceMonitor.scrapeTimeout }}
     scheme: http
-    {{- end }}
+  {{- end }}
 {{- end }}
